重命名部分函数，注释部分未使用函数，去除cookie相关代码
